Updated function create task and get list project and create project by role manage or admin Updated layout page task

--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -11,10 +11,13 @@ File: Main Css File
 //Core files
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
+// @import "variables-dark";
 @import "variables";
+@import "style";
 @import "~bootstrap/scss/mixins";
 @import '~bootstrap/scss/bootstrap';
-@import 'bootstrap';
+// @import 'bootstrap';
+
 // @import '~bootstrap-vue/src/index.scss';
 // @import '~bootstrap-vue-3/src/styles/styles.scss';
 
