--- a/resources/assets/scss/scss/_card.scss
+++ b/resources/assets/scss/scss/_card.scss
@@ -170,7 +170,27 @@
   @include border-bottom-radius(var(--#{$prefix}card-inner-border-radius));
 }
 
+.card {
+    margin-bottom: $grid-gutter-width;
+    box-shadow: $box-shadow;
+}
 
+.card-drop {
+    font-size: 20px;
+    line-height: 0;
+    color: inherit;
+}
+
+.card-title {
+    font-size: 15px;
+    margin: 0 0 7px 0;
+    font-weight: $font-weight-medium;
+}
+
+.card-title-desc {
+    color: $card-title-desc;
+    margin-bottom: 24px;
+}
 //
 // Card groups
 //
