Updated get list task in project

--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -13,10 +13,11 @@ File: Main Css File
 @import "~bootstrap/scss/variables";
 // @import "variables-dark";
 @import "variables";
+// @import "scss/variables";
 @import "style";
 @import "~bootstrap/scss/mixins";
 @import '~bootstrap/scss/bootstrap';
-// @import 'bootstrap';
+@import 'bootstrap';
 
 // @import '~bootstrap-vue/src/index.scss';
 // @import '~bootstrap-vue-3/src/styles/styles.scss';
