--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -1,3 +1,22 @@
+:root {
+    --#{$prefix}card-spacer-y: #{$card-spacer-y};
+    --#{$prefix}card-spacer-x: #{$card-spacer-x};
+    --#{$prefix}card-title-spacer-y: #{$card-title-spacer-y};
+    --#{$prefix}card-border-width: #{$card-border-width};
+    --#{$prefix}card-border-color: #{$card-border-color};
+    --#{$prefix}card-border-radius: #{$card-border-radius};
+    --#{$prefix}card-box-shadow: #{$card-box-shadow};
+    --#{$prefix}card-inner-border-radius: #{$card-inner-border-radius};
+    --#{$prefix}card-cap-padding-y: #{$card-cap-padding-y};
+    --#{$prefix}card-cap-padding-x: #{$card-cap-padding-x};
+    --#{$prefix}card-cap-bg: #{$card-cap-bg};
+    --#{$prefix}card-cap-color: #{$card-cap-color};
+    --#{$prefix}card-height: #{$card-height};
+    --#{$prefix}card-color: #{$card-color};
+    --#{$prefix}card-bg: #{$card-bg};
+    --#{$prefix}card-img-overlay-padding: #{$card-img-overlay-padding};
+    --#{$prefix}card-group-margin: #{$card-group-margin};
+}
 body.page-task {
     margin: 0;
     font-family: "Nunito", sans-serif;
@@ -12,12 +31,12 @@ body.page-task {
     display: flex;
     align-items: flex-start;
 }
-.page-task .card-body {
-    flex: 1 1 auto;
-    min-height: 1px;
-    padding: 1.25rem;
-}
-.page-task .card-title {
+// .page-task .card-body {
+//     flex: 1 1 auto;
+//     min-height: 1px;
+//     padding: 1.25rem;
+// }
+.card-title {
     font-size: 15px;
     margin: 0 0 7px 0;
     font-weight: 500;
