cap nhat file scss

--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -59,7 +59,7 @@ body.page-task {
     border-bottom: 1px solid #eff2f7 !important;
 }
 .badge-soft-success {
-    color: #1cbb8c;
+    color: #7bc86c;
     background-color: rgba(28, 187, 140, 0.18);
 }
 .dropdown-toggle::after {
@@ -94,6 +94,7 @@ body.page-task {
       .content-main-info{
                         margin-left: 35px;
                         display: flex;
+                        margin-top: 20px;
                         @media (max-width: 850px) {
                              flex-wrap: wrap;
                        }
@@ -190,10 +191,27 @@ body.page-task {
                              }
                         }
          }
-
          .content-main-detail{
-             margin-top: 23px;
-            textarea{
+            h6 {
+                display: flex;
+                align-items: center;
+                span{
+                 margin-left: 16px;
+                }
+                i{
+                    font-size: 24px;
+                }
+            }
+        }
+         .content-main-detail{
+             margin-top: 25px;
+            .description{
+                 padding-left: 40px;
+            }
+        .comment_active{
+            padding-left: 40px;
+        }
+           textarea,.content-desc{
                 height: 60px;
                 margin-left: 0;
                 width: 100%;
@@ -262,6 +280,58 @@ body.page-task {
                                     }
          }
          .container-fluid{
+            .list_work_todo{
+                margin-top: 27px;
+                .work-todo{
+                     .work-todo-header{
+                        justify-content: space-between;
+                        font-size: 16px;
+                        .name{
+                            i{
+                                font-size: 24px;
+                            }
+                            span{
+                                margin-left: 13px;
+                            }
+                        }
+                        .btn_delete{
+                            background: #eaecf0;
+                            margin-top: 8px;
+                            border-radius: 5px;
+                            cursor: pointer;
+                            padding: 5px 10px;
+                        }
+                       
+                     }
+                     .work-todo-content{
+                        font-size: 16px;
+                        .progress{
+                            border-radius: 4px;
+                            clear: both;
+                            height: 8px;
+                            margin: 0px 0 0 15px;
+                            overflow: hidden;
+                            background: #091e4214;
+                            width: 100%;
+                            .progress-line{
+                                height: 8px;
+                                width: 30%;
+                                background: #7bc86c;
+                            }
+                        }
+                     }
+
+                     .btn_add{
+                        background: #eaecf0;
+                        margin-top: 15px;
+                        border-radius: 5px;
+                        padding: 7px 10px;
+                        width: 120px;
+                        margin-left: 40px;
+                        cursor: pointer;
+                     }
+                }
+            }
             .list-group-item{
               background: #eaecf0;
               margin-top: 8px;
@@ -271,11 +341,21 @@ body.page-task {
             }
             .item:hover{
                  cursor: pointer;
-                 transform: scale(1.06);
+                //  transform: scale(1.06);
                  opacity: 0.6;
             }
             h6{
                margin: 0;
+               display: flex;
+               align-items: center;
+            }
+            .name_card{
+                p{
+                    font-size: 24px;
+                    span{
+                        margin-left: 12px;
+                    }
+                }
             }
         }   
         
@@ -302,18 +382,21 @@ body.page-task {
     padding-bottom: 20px;
      .modalMember-header{
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         border-bottom: 2px solid #eaecf0;
+        padding-bottom: 8px;
          
         a{
             font-size: 20px;
             margin-top: -17px;
             cursor: pointer;
+            position: absolute;
+            right: 10px;
         }
         a:hover{
              cursor: pointer;
-             transform: scale(1.06);
+         
              opacity: 0.6;
         }
      }
@@ -350,13 +433,14 @@ body.page-task {
      }
 
      input{
-        border: 0;
+        background: #fff;
+        border: 2px solid #e4e6ea;
         width: 100%;
-        background: #eaecf0;
         padding: 5px;
         margin-top: 15px;
         border-radius: 4px;
         margin-bottom: 15px;
+        outline-color: #4d82dd;
      }
     
 }
@@ -371,6 +455,26 @@ body.page-task {
     top: 38px;
     border-radius: 3px;
     padding-bottom: 20px;
+    .modalFilter-header{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 2px solid #eaecf0;
+        padding-bottom: 8px;
+         
+        a{
+            font-size: 20px;
+            margin-top: -17px;
+            cursor: pointer;
+            position: absolute;
+            right: 10px;
+        }
+        a:hover{
+             cursor: pointer;
+         
+             opacity: 0.6;
+        }
+     }
     .search{
         border: 0;
         width: 100%;
@@ -399,7 +503,7 @@ body.page-task {
         background: #091e4221;
      }
      .btn:hover{
-        transform: scale(1.06);
+       
         opacity: 0.6;
      }
      .modalFilter{
@@ -479,7 +583,125 @@ body.page-task {
     }
     a:hover{
          cursor: pointer;
-         transform: scale(1.06);
+      
          opacity: 0.6;
     }
+}
+.modalFile{
+    position: absolute;
+    z-index: 100;
+    background: #fff;
+    width: 304px;
+    padding: 15px;
+    left: 0;
+    top: 38px;
+    border-radius: 3px;
+    padding-bottom: 20px;
+    .modalFile-header{
+        border-bottom: 2px solid #eaecf0;
+        padding-bottom: 8px;
+         
+        a{
+            font-size: 20px;
+            margin-top: -17px;
+            cursor: pointer;
+            position: absolute;
+            right: 10px;
+        }
+        a:hover{
+             cursor: pointer;
+         
+             opacity: 0.6;
+        }
+     }
+     .upload{
+         margin-top: 10px;
+     }
+     .attach_link{
+         input{
+            background: #fafbfc;
+            border: 2px solid #e2e4e9;
+            padding: 5px;
+            border-radius: 3px;
+            width: 100%;
+            margin-top: 5px;
+         }
+        
+     }
+     .btn{
+        background: #eaecf0;
+        border-radius: 3px;
+        padding: 5px 8px;
+        margin-top: 12px;
+     }
+     
+}
+
+.modal_work_todo{
+    position: absolute;
+    z-index: 100;
+    background: #fff;
+    width: 304px;
+    padding: 15px;
+    left: 0;
+    top: 38px;
+    border-radius: 3px;
+    padding-bottom: 20px;
+    .modal_work_todo-header{
+        border-bottom: 2px solid #eaecf0;
+        padding-bottom: 8px;
+         
+        a{
+            font-size: 20px;
+            margin-top: -17px;
+            cursor: pointer;
+            position: absolute;
+            right: 10px;
+        }
+        a:hover{
+             cursor: pointer;
+         
+             opacity: 0.6;
+        }
+    }
+
+    input{
+        background: #fafbfc;
+        border: 2px solid #e2e4e9;
+        padding: 5px;
+        border-radius: 3px;
+        width: 100%;
+        margin-top: 5px;
+     }
+     .title{
+        margin-top: 10px !important;
+     }
+     .btn_add{
+        margin-top: 20px;
+        background: #0079bf;
+        width: 82px;
+        text-align: center;
+        padding: 5px 0;
+        color: #fff;
+        border-radius: 5px;
+     }
+}
+
+.card{
+     .list_filter{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        row-gap: 6px;
+        padding-bottom: 5px;
+        column-gap: 3px;
+        .filter{
+            width: 40px;
+            height: 8px;
+            background: aquamarine;
+        }
+     }
+}
+#item{
+     background: #ebecf0;
 }
