--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -70,6 +70,33 @@ body.page-task {
 .modal-dialog{
     .modal-body{
         background: #f4f5f7 !important;
+        .container-fluid{
+             .container-fluid-row{
+                @media (max-width: 992px) {
+                    flex-direction: column;
+                }
+             }
+             .list-item{
+                @media (max-width: 992px) {
+                    margin-top: 20px;
+                }
+             }
+             .list-group{
+                @media (max-width: 992px) {
+                    flex-direction: row;
+                    column-gap: 22px;
+                    display: flex;
+                    width: 100%;
+                    flex-wrap: wrap;
+                   
+                }
+                .list-group-item{
+                    @media (max-width: 992px) {
+                        width: 47%;
+                    }
+                }
+             }
+        }
     }
     .name_card{
         span{
@@ -331,6 +358,10 @@ body.page-task {
                         cursor: pointer;
                      }
                 }
+            }
+
+            .list-group-item:hover{
+                background: #d5d8de;
             }
             .list-group-item{
               background: #eaecf0;
@@ -687,6 +718,84 @@ body.page-task {
      }
 }
 
+.modal_move{
+    position: absolute;
+    z-index: 100;
+    background: #fff;
+    width: 304px;
+    padding: 15px;
+    left: 0;
+    top: 38px;
+    border-radius: 3px;
+    padding-bottom: 20px;
+    .modal_move-header{
+        border-bottom: 2px solid #eaecf0;
+        padding-bottom: 8px;
+         
+        a{
+            font-size: 20px;
+            margin-top: -17px;
+            cursor: pointer;
+            position: absolute;
+            right: 10px;
+        }
+        a:hover{
+             cursor: pointer;
+         
+             opacity: 0.6;
+        }
+    }
+
+     .title{
+        margin-top: 20px !important;
+        
+     }
+     .modal_move-content{
+        margin-top: 5px;
+        .btn{
+            background: #ecedf0;
+            padding: 0px 0;
+            border-radius: 5px;
+            text-align: inherit;
+            padding: 2px 18px;
+            cursor: pointer;
+            p{
+                color: #7e7f81;
+            }
+         }
+
+         .select_table{
+             width: 100%;
+         }
+         .select_list{
+             width: 70%;
+             margin-top: 8px;
+         }
+         .select_location{
+            width: 25%;
+            margin-left: 5%;
+            margin-top: 8px;
+            padding: 2px 10px;
+         }
+     }
+
+     .btn_move{
+        margin-top: 20px;
+        background: #0079bf;
+        width: 82px;
+        text-align: center;
+        padding: 6px 0;
+        color: #fff;
+        border-radius: 5px;
+        cursor: pointer;
+     }
+
+     .btn_move:hover{
+         opacity: 0.6;
+     }
+    
+}
+
 .card{
      .list_filter{
         display: flex;
@@ -702,6 +811,167 @@ body.page-task {
         }
      }
 }
+.layoutview-header{
+    margin-bottom: 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   
+    @media (max-width: 1400px) {
+        flex-wrap: wrap;
+        row-gap: 7px;
+       }
+    .layoutview-header-left{
+        display: flex;
+        align-items: center;
+        width: 44%;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        @media (max-width: 1400px) {
+             width: 100%;
+       }
+
+        .btn_display_working_space{
+             position: relative;
+             .modal_btn_display_working_space{
+                position: absolute;
+                top: 45px;
+                left: 0;
+                width: 225px;
+                background: black;
+                z-index: 1000;
+             }
+        }
+        .name_project{
+            font-size: 18px;
+            font-weight: 700;
+            margin: 0;
+           
+        }
+        .icon_star{
+            padding: 0px 10px;
+            height: 32px;
+            display: flex;
+            background: rgb(0 0 0 / 10%);
+            cursor: pointer;
+            color:#172b4d;
+            font-size: 13px;
+            margin-left: 10px;
+            align-items: center;
+        }
+        .icon_star:hover{
+            opacity: 0.6;
+            transform: scale(1.06);
+        }
+        .btn_dropdown{
+            padding: 0px 10px;
+            height: 32px;
+            display: flex;
+            background: rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+            color: #172b4d;
+            margin-left: 10px;
+            align-items: center;
+            font-size: 30px;
+            //  i{
+            //     font-size: 30px;
+            //     background: rgb(0 0 0 / 10%);
+            //     padding: 13% 8%;
+            //     color: #172b4d;
+                
+            //  }
+        }
+        .btn_dropdown:hover{
+             transform: scale(1.06);
+             opacity: 0.6;
+        }
+        a{
+             padding: 0px 5px;
+             height: 32px;
+             background: rgb(0 0 0 / 10%);
+            color: #172b4d;
+            text-decoration: none;
+            display:flex;
+            font-size: 14px;
+            cursor: pointer;
+            align-items: center;
+            margin-left: 10px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            i{
+                font-size: 20px;
+                
+            }
+            p{
+                margin-left: 3px !important;
+            }
+        }
+        a:hover{
+            opacity: 0.6;
+            transform: scale(1.06);
+        }
+    }
+
+    .layoutview-header-right{
+        display: flex;
+        width: 57%;
+        justify-content: flex-end;
+        flex-wrap: wrap;
+        align-items: center;
+        @media (max-width: 1400px) {
+             width: 100%;
+       }
+
+       .btn_share{
+        background: #0079bf;
+        color: #fff;
+       }
+         
+        .list_user{
+            display: flex;
+            align-items: center;
+            margin-left: 10px;
+            .avatar{
+                cursor: pointer;
+                img{
+                    width: 32px;
+                    height: 32px;
+                    border-radius: 100%;
+                    margin-left: 2px;
+                }
+               
+            }
+        }
+
+        a{
+            padding: 0px 5px;
+            height: 32px;
+            background: rgb(0 0 0 / 10%);
+            color: #172b4d;
+            text-decoration: none;
+             display:flex;
+             align-items: center;
+             font-size: 14px;
+             cursor: pointer;
+             align-items: center;
+             margin-left: 10px;
+             text-overflow: ellipsis;
+              white-space: nowrap;
+             i{
+                font-size: 20px;
+                
+            }
+            p{
+                margin-left: 3px !important;
+            }
+        }
+        a:hover{
+            opacity: 0.6;
+            transform: scale(1.06);
+        }
+    }
+}
+
 #item{
      background: #ebecf0;
 }
