--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -341,10 +341,8 @@ body.page-task {
                             overflow: hidden;
                             background: #091e4214;
                             width: 100%;
-                            .progress-line{
-                                height: 8px;
-                                width: 30%;
-                                background: #7bc86c;
+                            .progress-bar{
+                                background: #7bc86c !important;
                             }
                         }
                      }
@@ -646,9 +644,22 @@ body.page-task {
              opacity: 0.6;
         }
      }
-     .upload{
-         margin-top: 10px;
+     .list_upload{
+        .upload{
+            margin-top: 10px;
+            padding: 5px;
+            width: 100%;
+        }
+        .upload:hover{
+             cursor: pointer;
+             background:#eaecf0;
+        }
+
+        #file{
+            display: none;
+        }
      }
+    
      .attach_link{
          input{
             background: #fafbfc;
@@ -797,7 +808,72 @@ body.page-task {
     
 }
 
+.modal_expiration_date{
+    position: absolute;
+    z-index: 100;
+    background: #fff;
+    width: 304px;
+    padding: 15px;
+    left: 0;
+    top: 38px;
+    border-radius: 3px;
+    padding-bottom: 20px;
+    .modal_expiration_date-header{
+        border-bottom: 2px solid #eaecf0;
+        padding-bottom: 8px;
+         
+        a{
+            font-size: 20px;
+            margin-top: -17px;
+            cursor: pointer;
+            position: absolute;
+            right: 10px;
+        }
+        a:hover{
+             cursor: pointer;
+         
+             opacity: 0.6;
+        }
+    }
+
+     .title{
+        margin-top: 20px !important;
+        
+     }
+     .remind{
+        select{
+            width: 100%;
+            border: 1px solid #dfe1e6;
+            padding: 6px 0;
+        }
+     }
+     p{
+        margin-top: 10px !important;
+     }
+     .day_btn{
+        margin-top: 10px;
+        background: #0079bf;
+        width: 100%;
+        text-align: center;
+        padding: 6px 0;
+        color: #fff;
+        border-radius: 5px;
+        cursor: pointer;
+     }
+     .btn_gobo{
+        margin-top: 8px;
+        background: #ecedf0;
+        color: #000;
+     }
+
+     .btn:hover{
+         opacity: 0.6;
+     }
+    
+}
+
 .card{
+    cursor: pointer;
      .list_filter{
         display: flex;
         flex-wrap: wrap;
